fix: update welcome and duplicate code pages for improved readability and consistency

--- a/style.css
+++ b/style.css
@@ -80,6 +80,14 @@ h4 {
 	margin-bottom: .5rem;
 }
 
+h5 {
+	font-family: "Inter", sans-serif;
+	font-weight: 400;
+	font-size: 1.2rem;
+	margin-top: .5rem;
+	margin-bottom: .5rem;
+}
+
 p {
 	font-family: "Inter", sans-serif;
 	font-weight: 400;
